objects/Disbursement__c.object
<CustomObject>
    <description>Disbursement</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Amount of dispersement</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Dispersment__c</fullName>
        <label>Date of Disbursement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funds_Remaining__c</fullName>
        <formula>Opportunity__r.Est_Improvement_Cost__c -  Opportunity__r.Dispersment_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The funds remaining to be dispersed.</inlineHelpText>
        <label>Funds Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Dispersements_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Disbursement</label>
    <nameField>
        <label>Disbursement Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>